chore: update pdk and cdk and dependencies (#11)
* interim commit pending needs removal of gensim

* chore: fix license headers

* chore: update pdk and cdk and dependencies
