# packages/api/generated/runtime/python/amzn_smart_product_onboarding_api_python_runtime/models/gen_product_response_content.py
@@ -3,25 +3,26 @@
 """
     Smart Product Onboarding API
 
-    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+    No description provided
 
     The version of the OpenAPI document: 1.0.0
-    Generated by OpenAPI Generator (https://openapi-generator.tech)
 
+    NOTE: This class is auto generated.
     Do not edit the class manually.
 """  # noqa: E501
-
 
 from __future__ import annotations
 import pprint
 import re  # noqa: F401
 import json
-
-
-from typing import Any, ClassVar, Dict, List, Optional
-from pydantic import BaseModel, StrictStr
-from pydantic import Field
+from enum import Enum
+from datetime import date, datetime
+from typing import Any, List, Union, ClassVar, Dict, Optional, TYPE_CHECKING
+from pydantic import Field, StrictStr, ValidationError, field_validator, BaseModel, SecretStr, StrictFloat, StrictInt, StrictBytes, StrictBool
+from decimal import Decimal
+from typing_extensions import Annotated, Literal
 from amzn_smart_product_onboarding_api_python_runtime.models.model_usage import ModelUsage
+from amzn_smart_product_onboarding_api_python_runtime.models.product_data import ProductData
 try:
     from typing import Self
 except ImportError:
@@ -31,18 +32,15 @@ class GenProductResponseContent(BaseModel):
     """
     GenProductResponseContent
     """ # noqa: E501
+    product: ProductData
     usage: Optional[ModelUsage] = None
-    title: StrictStr
-    description: StrictStr
-    short_description: Optional[StrictStr] = Field(default=None, alias="shortDescription")
-    metadata: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["title", "description", "shortDescription", "metadata"]
+    __properties: ClassVar[List[str]] = ["product", "usage"]
+
 
     model_config = {
         "populate_by_name": True,
         "validate_assignment": True
     }
-
 
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
@@ -74,11 +72,18 @@ class GenProductResponseContent(BaseModel):
             },
             exclude_none=True,
         )
+        # override the default output from pydantic by calling `to_dict()` of product
+        if self.product:
+            _dict['product'] = self.product.to_dict()
+        # override the default output from pydantic by calling `to_dict()` of usage
+        if self.usage:
+            _dict['usage'] = self.usage.to_dict()
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
         """Create an instance of GenProductResponseContent from a dict"""
+
         if obj is None:
             return None
 
@@ -86,11 +91,8 @@ class GenProductResponseContent(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "title": obj.get("title"),
-            "description": obj.get("description"),
-            "shortDescription": obj.get("shortDescription"),
-            "metadata": obj.get("metadata")
+            "product": ProductData.from_dict(obj.get("product")) if obj.get("product") is not None else None,
+            "usage": ModelUsage.from_dict(obj.get("usage")) if obj.get("usage") is not None else None
         })
         return _obj
-
 
